<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ppca">Software Development Laboratory/Postgraduate Program in Applied Computing/Federal University of Pará (UFPA-CAMTUC)</string>
    <string name="bioblu">BIOBLU</string>
    <string name="logo">Logo bioblu</string>
    <string name="ic_share">ícone de compartilhar</string>
    <string name="ic_questions">TODO</string>
    <string name="filho_3img">imagem filho 3</string>
    <string name="filho4_img">TODO</string>
    <string name="pai_1">TODO</string>
    <string name="pai_2">TODO</string>
    <string name="f1_2">TODO</string>
    <string name="f1_1">TODO</string>
    <string name="imagem_tutorial1">TODO</string>
    <string name="filho4_law">TODO</string>
    <string name="filho1_law">TODO</string>
    <string name="logo_ufpa">TODO</string>
    <string name="ic_training">TODO</string>
    <string name="ic_1law">TODO</string>
    <string name="ic_review">TODO</string>
    <string name="ic_configuration">TODO</string>
    <string name="ic_poli">TODO</string>
    <string name="ic_2law">TODO</string>
    <string name="ic_training1" />

    <string name="poli">TODO</string>


</resources>