<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo_cruz"
    tools:context="com.bioblu.first_law.activity_tutorial_1law">

    <RelativeLayout
        android:id="@+id/relativeLayout_tutorial1law"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/fundo_cruz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </RelativeLayout>

    <ImageView
        android:id="@+id/law1_filho3"
        android:layout_width="40dp"
        android:layout_height="38dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewFilho3_tutorial1law"
        app:layout_constraintEnd_toStartOf="@+id/guideline42"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="@+id/guideline41"
        tools:ignore="VectorDrawableCompat"
        android:contentDescription="@string/filho4_img" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.65" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35" />

    <ImageView
        android:id="@+id/law1_filho2"
        android:layout_width="40dp"
        android:layout_height="38dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewFilho2_tutorial1law"
        app:layout_constraintEnd_toStartOf="@+id/guideline41"
        app:layout_constraintStart_toStartOf="@+id/guideline40"
        tools:ignore="VectorDrawableCompat"
        android:contentDescription="@string/filho_3img" />

    <ImageView
        android:id="@+id/law1_filho4"
        android:layout_width="40dp"
        android:layout_height="38dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewFilho4_tutorial1law"
        app:layout_constraintStart_toStartOf="@+id/guideline42"
        tools:ignore="VectorDrawableCompat"
        android:contentDescription="@string/filho4_law" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.92" />

    <TextView
        android:id="@+id/textViewFilho1_tutorial1law"
        android:layout_width="39dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline33"
        app:layout_constraintEnd_toStartOf="@+id/guideline40" />

    <TextView
        android:id="@+id/textViewFilho3_tutorial1law"
        android:layout_width="39dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline33"
        app:layout_constraintEnd_toStartOf="@+id/guideline42"
        app:layout_constraintStart_toStartOf="@+id/guideline41" />

    <TextView
        android:id="@+id/textViewFilho4_tutorial1law"
        android:layout_width="39dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline33"
        app:layout_constraintStart_toStartOf="@+id/guideline42" />

    <TextView
        android:id="@+id/textViewF11_tutorial1law"
        android:layout_width="39dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline44"
        app:layout_constraintEnd_toStartOf="@+id/guideline41"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="@+id/guideline40" />

    <TextView
        android:id="@+id/textViewF12_tutorial1law"
        android:layout_width="39dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline44"
        app:layout_constraintEnd_toStartOf="@+id/guideline42"
        app:layout_constraintStart_toStartOf="@+id/guideline41" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/law1_filho1"
        android:layout_width="40dp"
        android:layout_height="38dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewFilho1_tutorial1law"
        app:layout_constraintEnd_toStartOf="@+id/guideline40"
        tools:ignore="VectorDrawableCompat"
        android:contentDescription="@string/filho1_law" />

    <TextView
        android:id="@+id/textViewFilho2_tutorial1law"
        android:layout_width="39dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline33"
        app:layout_constraintEnd_toStartOf="@+id/guideline41"
        app:layout_constraintHorizontal_bias="0.608"
        app:layout_constraintStart_toStartOf="@+id/guideline40" />

    <ImageView
        android:id="@+id/imageViewTutorial"
        android:layout_width="183dp"
        android:layout_height="165dp"
        android:layout_marginBottom="312dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline33"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/img1"
        android:contentDescription="@string/imagem_tutorial1" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tutorial_27law"
        android:textColor="@color/cor_texto"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/imageViewTutorial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageViewF11_tutorial1law"
        android:layout_width="40sp"
        android:layout_height="38sp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewF11_tutorial1law"
        app:layout_constraintEnd_toStartOf="@+id/guideline41"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="@+id/guideline40"
        app:srcCompat="@color/fundo"
        android:contentDescription="@string/f1_1" />

    <ImageView
        android:id="@+id/imageViewF12_tutorial1law"
        android:layout_width="40sp"
        android:layout_height="38sp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewF12_tutorial1law"
        app:layout_constraintEnd_toStartOf="@+id/guideline42"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="@+id/guideline41"
        app:srcCompat="@color/fundo"
        android:contentDescription="@string/f1_2" />

    <ImageView
        android:id="@+id/imageViewParental2_tutorial1law"
        android:layout_width="40sp"
        android:layout_height="38sp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewParental2_tutorial1law"
        app:layout_constraintEnd_toStartOf="@+id/guideline42"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="@+id/guideline41"
        app:srcCompat="@color/fundo"
        android:contentDescription="@string/pai_2" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.63" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <ImageView
        android:id="@+id/imageViewParental_tutorial1law"
        android:layout_width="40sp"
        android:layout_height="38sp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewParental_tutorial1law"
        app:layout_constraintEnd_toStartOf="@+id/guideline41"
        app:layout_constraintStart_toStartOf="@+id/guideline40"
        app:srcCompat="@color/fundo"
        android:contentDescription="@string/pai_1" />

    <TextView
        android:id="@+id/textViewParental_tutorial1law"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/cor_texto"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline43"
        app:layout_constraintEnd_toStartOf="@+id/guideline41"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="@+id/guideline40" />

    <TextView
        android:id="@+id/textViewParental2_tutorial1law"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/cor_texto"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline43"
        app:layout_constraintEnd_toStartOf="@+id/guideline42"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="@+id/guideline41" />


</android.support.constraint.ConstraintLayout>